--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.3",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
