--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.3",
-    "stripe": "^14.2.0",
     "joi": "^17.11.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.2",
+    "stripe": "^14.2.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
