--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "^5.5.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
@@ -25,5 +25,13 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "prisma": "^5.5.2"
+  }
+  ,"build": {
+    "extraResources": [
+      {
+        "from": "node_modules/.prisma/client/",
+        "to": "app/node_modules/.prisma/client/"
+      }
+    ]
   }
 }
