--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
-    "stripe": "^14.2.0"
+    "stripe": "^14.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
